--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-Hello World
+<!DOCTYPE html>
+<html lang=en>
+ <head>
+		<meta charset=utf-8>
+		<meta http-equiv=X-UA-Compatible content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name=description content="">
+		<meta name=author content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>s02121225</title>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
+		<link href="http://cdn.bootcss.com/animate.css/3.3.0/animate.css" rel="stylesheet">
+		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" rel="stylesheet">		 
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+ </head>
+  <body id="myPage">
+		<div class="navbar-wrapper">
+			<div class="container">
+				<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+					<div class="navbar-header">
+						<button type=button class="navbar-toggle collapsed" data-toggle=collapse data-target=#navbar aria-expanded="false">
+						 
+						<span class="icon-bar"></span> 
+						<span class="icon-bar"></span> 
+						<span class="icon-bar"></span>
+						</button> 
+						<a class="navbar-brand" href="#myPage">JD Almighty. 傑德全能</a>
+
+					</div>	
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								</li>
+	   	 					<!--	<li>
+									<a class="navbar-brand" href="http://www.jdaiot.com/user888">
+									立即體驗
+									</a>
+  								</li> --> 
+								<li>
+								 <a class="navbar-brand">
+		   	 						<i class="fa fa-phone"></i>
+		   	 				 		電話: (06)299-7665	   	 						
+		   	 				 	 </a>
+		   	 				 	 </li>	   	 						
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li><a href ="#myPage">首頁</a></li>
+								<li><a href ="#smarthouse">智慧生活</a></li>
+								<li><a href ="#about">關於傑德</a></li>								
+								<li><a href ="#contact">聯繫我們</a></li>
+							</ul>
+						</div>
+				</nav>		
+			</div>		
+		</div>
+  	  Hello World
+  </body>
+</html>  	
