--- a/index.html
+++ b/index.html
@@ -16,42 +16,28 @@
   <body id="myPage">
 		<div class="navbar-wrapper">
 			<div class="container">
-				<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+				<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 					<div class="navbar-header">
-						<button type=button class="navbar-toggle collapsed" data-toggle=collapse data-target=#navbar aria-expanded="false">
-						 
+						<button type=button class="navbar-toggle collapsed" data-toggle=collapse data-target=#navbar aria-expanded="false">						 
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span>
 						</button> 
-						<a class="navbar-brand" href="#myPage">JD Almighty. 傑德全能</a>
-
+						<a class="navbar-brand" href="#myPage">Chun-Chieh Huang</a>
 					</div>	
 						<div id="navbar" class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								</li>
-	   	 					<!--	<li>
-									<a class="navbar-brand" href="http://www.jdaiot.com/user888">
-									立即體驗
-									</a>
-  								</li> --> 
-								<li>
-								 <a class="navbar-brand">
-		   	 						<i class="fa fa-phone"></i>
-		   	 				 		電話: (06)299-7665	   	 						
-		   	 				 	 </a>
-		   	 				 	 </li>	   	 						
-							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href ="#myPage">首頁</a></li>
-								<li><a href ="#smarthouse">智慧生活</a></li>
-								<li><a href ="#about">關於傑德</a></li>								
-								<li><a href ="#contact">聯繫我們</a></li>
+								<li><a href ="#myPage">Home</a></li>
+								<li><a href ="#about me">about me</a></li>
+								<li><a href ="#project">project</a></li>							
+								<li><a href ="#contact">dont know</a></li>
 							</ul>
 						</div>
 				</nav>		
 			</div>		
 		</div>
+	<div>	
   	  Hello World
+  	 </div> 
   </body>
 </html>  	
