--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 			</div>		
 		</div>
 
+		<hr id="about me" class="featurette-divider">
+		<div class="row featurette">
+	 		<div class="col-md-7">
+				<h2 class="featurette-heading">JJHuang  <span class="text-muted">快樂的自造者</span></h2>
+				<p class=lead>因為剛從澳洲打工回來不知道人生的方向，因緣際會的表哥找了我一起創業做物聯網產品，進而摸到3D printer，姑丈也對3D列印有很大的興趣，再我上網做了功課後，那時剛好ATOM2.0集資完畢，所以由姑丈出資，我來摸索，再摸索的過程中引起了對自造的興趣，查了很多資料做了很多的功課問了很多人，不知不覺的對3D列印機也熟了起來可以改造、編程、修理！ 從解決問題當中，找出了對自我的肯定，就是身為一個自造者的價值。
+				</p>
+			</div>
+			<div class=col-md-5>
+				<img class="featurette-image img-responsive" data-src=holder.js/300x300/auto alt="300x300" src="photo/jjhuang.jpg" data-holder-rendered="true">
+			</div>
+		</div>	
+
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>	
