--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href ="#myPage">Home</a></li>
-								<li><a href ="#about me">About me</a></li>
+								<li><a href ="#My">My Profile</a></li>
+								<li><a href ="#about">About</a></li>
 								<li><a href ="#assignment">My Assignment</a></li>
 								<li><a href ="#project">Final Project</a></li>
 							</ul>
@@ -38,7 +39,7 @@
 			</div>		
 		</div>
 
-		<hr id="about me" class="featurette-divider">
+		<hr id="My" class="featurette-divider">
 		<div class="row featurette">
 	 		<div class="col-md-7">
 				<h2 class="featurette-heading">JJHuang  <span class="text-muted">快樂的自造者</span></h2>
@@ -46,9 +47,21 @@
 				</p>
 			</div>
 			<div class=col-md-5>
-				<img class="featurette-image img-responsive" data-src=holder.js/300x300/auto alt="300x300" src="photo/jjhuang.jpg" data-holder-rendered="true">
+				<img class="featurette-image img-responsive" data-src=holder.js/500x500/auto alt="500x500" src="photo/jjhuang.jpg" data-holder-rendered="true">
 			</div>
 		</div>	
+
+		<hr id="about" class="featurette-divider">
+		<div class="row featurette">
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="photo/robot.jpg" data-holder-rendered="true">
+			</div>
+			<div class="col-md-7">
+				<h2 class="featurette-heading">Robot <span class="text-muted">屬於男孩的玩具</span></h2>
+				<p class="lead">選了一個屬於男孩的夢想，不管年齡增長了多少，始終在心中留了一個位置，沒錯，『機器人』從小看了魔鬼終結者後，就對機器人產生了極大的興趣，在2016這一年改變了人生態度，再看到胖地有著FabAcademy的活動，二話不說起身前往，在跟一堆自造者相處過後，找到了一個自己覺得很酷的專案，就是機器人！
+				</p>
+			</div>
+		</div>
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
