--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span>
 						</button> 
-						<img src="photo/logo.png" class="img-responsive">
+						<a href ="#myPage"><img src="photo/logo.png" class="img-responsive"></a>
  					</div>	
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href ="#myPage">Home</a></li>
-								<li><a href ="#My">My Profile</a></li>
+								<li><a href="#myPage">Home</a></li>
+								<li><a href ="index.html#My">My Profile</a></li>
 								<li><a href ="#about">About</a></li>
 								<li><a href ="#assignment">My Assignment</a></li>
 								<li><a href ="#project">Final Project</a></li>
@@ -58,10 +58,29 @@
 			</div>
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Robot <span class="text-muted">屬於男孩的玩具</span></h2>
-				<p class="lead">選了一個屬於男孩的夢想，不管年齡增長了多少，始終在心中留了一個位置，沒錯，『機器人』從小看了魔鬼終結者後，就對機器人產生了極大的興趣，在2016這一年改變了人生態度，再看到胖地有著FabAcademy的活動，二話不說起身前往，在跟一堆自造者相處過後，找到了一個自己覺得很酷的專案，就是機器人！
+				<p class="lead">選了一個屬於男孩的夢想，不管年齡增長了多少，始終在心中留了一個位置，沒錯，『機器人』從小看了魔鬼終結者後，就對機器人產生了極大的興趣，希望能在2016這一年中有所改變，看到『胖地』有著FabAcademy的活動，想著何不參加去認識更多的自造者呢？或許會有更棒的點子，二話不說起身前往，在跟一堆自造者相處過後，發現了一個自己覺得很棒也符合興趣的專案，就是『二足機器人』！
 				</p>
 			</div>
 		</div>
+		<div id="assignment" class="container">
+			<div class="row">
+				<div class="col-sm-4">
+                <a href="week1.html"><h4>Week 1</h4></a>
+                <p>principles and practices</p>
+                <p>project manangement</p>
+            	</div>
+            	<div class="col-sm-4">
+                <a href="week2.html"><h4>Week 2</h4></a>
+                <p>principles and practices</p>
+                <p>project manangement</p>
+            	</div>
+            	<div class="col-sm-4">
+                <a href="week3.html"><h4>Week 3</h4></a>
+                <p>principles and practices</p>
+                <p>project manangement</p>
+            	</div>
+			</div>
+		</div>	
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
