--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="row featurette">
 	 		<div class="col-md-7">
 				<h2 class="featurette-heading">JJHuang  <span class="text-muted">快樂的自造者</span></h2>
-				<p class=lead>因為剛從澳洲打工回來不知道人生的方向，因緣際會的表哥找了我一起創業做物聯網產品，進而摸到3D printer，姑丈也對3D列印有很大的興趣，再我上網做了功課後，那時剛好ATOM2.0集資完畢，所以由姑丈出資，我來摸索，再摸索的過程中引起了對自造的興趣，查了很多資料做了很多的功課問了很多人，不知不覺的對3D列印機也熟了起來可以改造、編程、修理！ 從解決問題當中，找出了對自我的肯定，就是身為一個自造者的價值。
+				<p class=lead>一個不知道該幹做啥的物理人，學的東西好雜，會使用3D列印機、3D製圖和寫網頁、希望自己能再學習更多專業技能，編寫個網頁來記錄我的學習狀況，也完全開源我的網頁碼，希望能幫助到一些剛要入門的人，樂於助人的我，我想這就是身為一個自造者的價值吧！
 				</p>
 			</div>
 			<div class=col-md-5>
